--- a/apps/index.html
+++ b/apps/index.html
@@ -101,7 +101,7 @@ $(function () {
         
         <p>
             <button type="button" value="START &#13;&#10;SPEAKING" class="example4" onclick="speak();" id="button">
-                START<br>SPEAKING
+                CLICK TO<br>SPEAK
             </button>
         </p>
     </div>
